<resources>
  <string name="app_name">家庭维修</string>
  <string name="action_settings">Settings</string>
  <string name="btn_start">开始体验</string>
  <string name="login_accept">账号</string>
  <string name="login_hint">请输入账号</string>
  <string name="login_password">密码</string>
  <string name="password_hint">请输入登录密码</string>
  <string name="btn_login_string">登陆</string>
  <string name="btn_reg_string">注册</string>
  <string name="login_reg">请输入手机号码</string>
  <string name="reg_number">请输入短信验证码</string>
  <string name="password_hint_two">确认登录密码</string>
  <string name="btn_getreg_sdtring">获取验证码</string>
  <string name="head_image">头像</string>
  <string name="neck_name">昵称</string>
  <string name="user_id">用户账号</string>
  <string name="my_adress">我的地址</string>
  <string name="gender">性别</string>
  <string name="categry">是否维修员</string>
  <string name="usertype">已认证资格</string>
  <string name="out_login">退出登录</string>
  <string name="ycl_crop_image_title">裁剪照片</string>
  <string name="ycl_upload_headimg">上传头像</string>
  <string name="ycl_take_picture">拍照</string>
  <string name="ycl_choose_gallery">从手机相册选择</string>
</resources>
