<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#10000000"
    >
    <include layout="@layout/titlebar"></include>
  <RelativeLayout
      android:layout_marginTop="15dp"
      android:id="@+id/rl_head_image"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="2"
      android:padding="10dp"
      android:background="#ffffff"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:text="@string/head_image"
        android:textSize="20sp"
        />
    <com.loopj.android.image.SmartImageView
        android:id="@+id/smart_head_image"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:src="@drawable/icon"
        />
  </RelativeLayout>
  <RelativeLayout
      android:layout_marginTop="1dp"
      android:id="@+id/rl_neck_name"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:padding="10dp"
      android:background="#ffffff"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:text="@string/neck_name"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tv_neck_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:text="您还没有设置昵称"
        android:textColor="#90000000"
        />
  </RelativeLayout>
  <RelativeLayout
      android:layout_marginTop="1dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:padding="10dp"
      android:background="#ffffff"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:text="@string/user_id"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tv_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:text="15861175521"
        android:textColor="#90000000"
        />
  </RelativeLayout>
  <!--<RelativeLayout
      android:id="@+id/rl_myadress"
      android:layout_marginTop="1dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:padding="10dp"
      android:background="#ffffff"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:text="@string/my_adress"
        android:textSize="20sp"
        />
  </RelativeLayout>-->
    <RelativeLayout
        android:id="@+id/rl_gender"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="#ffffff"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/gender"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="男"
            android:textColor="#90000000"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="#ffffff"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/categry"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="否"
            android:textColor="#90000000"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_qualificat"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="#ffffff"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/usertype"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tv_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="管道工"
            android:textColor="#90000000"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_out_login"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="#ffffff"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/out_login"
            android:textSize="20sp"
            />
    </RelativeLayout>
</LinearLayout>